# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  challenge_template.txt  init_challenge.py  init_year.py  pyproject.toml  template.txt  test_template.txt
.github/workflows/: actions.yml  update-chart.yml
2015/Day 01/: day01.py
2015/Day 02/: day02.py  day02_test.py
2015/Day 03/: day03.py
2015/Day 04/: day04.py  day04_test.py
2015/Day 05/: day05.py  day05_test.py
2015/Day 06/: day06.py  day06_test.py
2015/Day 07/: day07.py
2015/Day 08/: day08.py
2015/Day 09/: day09.py  day09_test.py
2015/Day 10/: day10.py  day10_test.py
2015/Day 11/: day11.py
2015/Day 12/: day12.py  day12_test.py  example_input.txt
2015/Day 13/: day13.py  day13_test.py
2015/Day 14/: day14.py  day14_test.py
2015/Day 15/: day15.py
2015/Day 16/: day16.py
2015/Day 17/: day17.py  day17_test.py
2015/Day 18/: day18.py  day18_test.py
2015/Day 19/: day19.py
2015/Day 20/: day20.py
2015/Day 21/: day21.py
2015/Day 22/: day22.py
2015/Day 23/: day23.py
2015/Day 24/: day24.py
2015/Day 25/: day25.py
2020/Day 01/: day01.py  day01_test.py
2020/Day 02/: day02.py  day02_test.py
2020/Day 03/: day03.py  day03_test.py
2020/Day 04/: day04.py  day04_test.py
2020/Day 05/: day05.py  day05_test.py
2021/Day 01/: day01.py  day01_test.py
2021/Day 02/: day02.py  day02_test.py
2021/Day 03/: day03.py  day03_test.py
2021/Day 04/: day04.py  day04_test.py
2021/Day 05/: day05.py  day05_test.py
aoc_util/: helpers.py
util/: project.py  template.txt
(+138 files in other folders)
